# FFTacticsFix

./: .gitignore  .gitmodules  CMakeLists.txt  FFTacticsFix.sln  README.md
FFTacticsFix/: FFTacticsFix.vcxproj  FFTacticsFix.vcxproj.filters  dllmain.cpp  logger.cpp
FFTacticsFix/includes/: config.h  logger.h
